--- a/index.html
+++ b/index.html
@@ -4,23 +4,79 @@ title: "Slow Factory Studio"
 permalink: /
 ---
 
+<script type="text/javascript">
+
+  let colours = [
+    'bg-pale-green',
+    'bg-jade',
+    'bg-brick',
+    'bg-lavender',
+    'bg-powder-blue',
+    'bg-butter'
+  ]
+
+  const random = Math.floor(Math.random() * colours.length);
+  // console.log(random, colours[random]);
+
+  document.body.classList.add(colours[random])
+
+</script>
+
 
 
 <div class="section">
   <div class="container">
 
+
     <a href="/" class="sf-logo"><img src="{{ 'images/slow-factory-logo-studio.svg' | asset_url }}" alt="Slow Factory Studio" class="slow-factory-logo"></a>
 
+
+    <div id="js-typewriter" class="title-xxl section" data-words="Decentralize,web3,Metaverse,Redistribute,Landback,DAO"></div>
+
+
+
+    <p class="text-lg overline underline">Slow Factory Studio is a Public Benefit organization adjacent to the Slow Factory non-profit, whose mission is to develop projects at the intersection of technology and climate justice with a strong equity-centered approach aimed to decentralize power and redistribute assets.</p>
+
     <br>
     <br>
+
+    <p class="text-lg">Currently creating projects that explore:</p>
+
+    <div class="row valign-top">
+
+      <div class="third">
+        <p class="title-sm">Is web3 all hype and currency speculation? Or is there a way to create with web3 through the lens of environmental justice and human rights?</p>
+        <p class="text-lg">So much conversation about blockchain and web3 has been in the language and culture of the emergent “crypto-bro” class, speculating and investing with little concern for any ethical or environmental impacts. We are actively driving changes to this power imbalance, using technology as a force for equity and liberation.</p>
+      </div>
+
+      <div class="third">
+        <p class="title-sm">How can web3 empower new types of organizations and change how emerging digital worlds interact and empower real-world relationships and communities?</p>
+        <p class="text-lg">Currency speculation and the “over-financialization of everything” are not the only uses of the blockchain. We are creating new structures that leverage the decentralized consensus mechanism of fundamental blockchain technology to build power outside white supremacy.</p>
+      </div>
+
+      <div class="third">
+        <p class="title-sm">How can DAO structures fundamentally change our relationship with occupied land in an anti-colonial context?</p>
+        <p class="text-lg">The promise of a truly representative and decentralized ownership and governance opens radical new possibilities for anti-colonial land management and resistance to colonial expansionist forces.</p>
+      </div>
+    </div>
+
+
     <br>
     <br>
     <br>
 
-    <p class="title-sm"><span class="underline">We Create</span></p>
 
-    <div id="js-typewriter" class="title-lg section-sm"></div>
+    <div class="overline"></div>
 
+    <div class="row valign-top">
+
+      <div class="two-thirds">
+      </div>
+
+      <div class="third">
+        <p class="title-xs">Contact: 👾 <a href="mailto:join@slowfactory.com?subject=make something with slowfactory studio!"> join@slowfactory.com</a></p>
+      </div>
+    </div>
 
   </div>
 </div>
